--- a/press/halloween-connect/index.htm
+++ b/press/halloween-connect/index.htm
@@ -75,7 +75,7 @@
                             <br> </p>
                         <p>
                             <strong>Releases:</strong>
-                            <br><a href="./halloween-connect">Halloween Connect</a>
+                            <br><a href="//khobeostudios.com/press/halloween-connect">Halloween Connect</a>
                             <br> 
                         </p>
                         <p> </p>
@@ -92,7 +92,7 @@
                         </p>
                         <h2 id="projects">Projects</h2>
                         <ul>
-                            <li><a href="./halloween_connect">Halloween Connect</a></li>
+                            <li><a href="//khobeostudios.com/press/halloween_connect">Halloween Connect</a></li>
                         </ul>
                     </div>
                 </div>
