--- a/press/index.htm
+++ b/press/index.htm
@@ -92,7 +92,7 @@
                         </p>
                         <h2 id="projects">Projects</h2>
                         <ul>
-                            <li><a href="./halloween_connect">Halloween Connect</a></li>
+                            <li><a href="./halloween-connect">Halloween Connect</a></li>
                         </ul>
                     </div>
                 </div>
