--- a/games/halloween-connect/privacy/index.htm
+++ b/games/halloween-connect/privacy/index.htm
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Halloween Connect</title>
+    <title>Halloween Connect Privacy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        * {
+            line-height: 1.2;
+            margin: 0;
+        }
+        html {
+            color: #888;
+            display: table;
+            font-family: sans-serif;
+            height: 100%;
+            text-align: center;
+            width: 100%;
+        }
+        body {
+            display: table-cell;
+            vertical-align: middle;
+            margin: 2em auto;
+        }
+        h1 {
+            color: #555;
+            font-size: 2em;
+            font-weight: 400;
+        }
+        p {
+            margin: 0 auto;
+        }
+        @media only screen and (max-width: 280px) {
+            body, p {
+                width: 95%;
+            }
+            h1 {
+                font-size: 1.5em;
+                margin: 0 0 0.3em;
+            }
+        }
+    </style>
 </head>
 
 <body>
+	<h1>Privacy</h1>
+	<br>
     <p>
-        Halloween Connect game is COPPA-compliant.<br>
-Halloween Connect doesn't collect any personal information and doesn't share it with third parties.<br>
-Halloween Connect doesn't require any extra permissions when installing the game so I can't collect any personal data.<br>
-Halloween Connect contains no in-app purchases, no advertisements and no external links.<br>
-Halloween Connect is fully functional offline.<br>
+        This game is COPPA-compliant.<br>
+This game doesn't collect any personal information and doesn't share it with third parties.<br>
+This game doesn't require any extra permissions when installing the game so I can't collect any personal data.<br>
+This game is fully functional offline.<br>
 If you have any questions about your privacy feel free to contact me at nntuyen@gmail.com.
     </p>
 </body>
