--- a/press/halloween-connect/index.htm
+++ b/press/halloween-connect/index.htm
@@ -31,15 +31,15 @@
         <div class="uk-grid">
             <div id="navigation" class="uk-width-medium-1-4">
                 <h1 class="nav-header">Khobeo Studios</h1>
-                <a class="nav-header" href="//khobeostudios.com/">khobeostudios.com</a>
+                <a class="nav-header" href="//khobeostudios.com/press">press kit</a>
                 <ul class="uk-nav uk-nav-side">
                     <li><a href="#factsheet">Factsheet</a></li>
                     <li><a href="#description">Description</a></li>
-                    <li><a href="#history">About</a></li>
+                    <li><a href="#history">History</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#images">Images</a></li>
-                    <li><a href="#logo">Logo</a></li>
-                    <li><a href="#quotes">Awards & Recognition</a></li>
+                    <li><a href="#screenshots">Screenshots</a></li>
+                    <li><a href="#logo">Logo & Icon</a></li>
+                    <li><a href="#about">About Khobeo Studios</a></li>
                     <li><a href="#credits">Team</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -54,28 +54,36 @@
                             <a href="#">Khobeo Studios</a>
                             <br> Based in Ho Chi Minh, Vietnam
                         </p>
+
                         <p>
-                            <strong>Founding date:</strong>
-                            <br> September, 2017
+                            <strong>Release date:</strong>
+                            <br> October 12th, 2017
                         </p>
+
+                        <p>
+                            <strong>Platforms:</strong>
+                            <br>
+                            <a href="https://play.google.com/store/apps/details?id=com.khobeo.halloweenconnect">Android</a>
+                            <br>
+                            <a href="https://itunes.apple.com/app/halloween-connect-classic/id1296522283">iOS</a>
+                        </p>
+
                         <p>
                             <strong>Website:</strong>
                             <br>
                             <a href="//khobeostudios.com/">khobeostudios.com</a>
                         </p>
+
                         <p>
-                            <strong>Press / Business contact:</strong>
-                            <br>
-                            <a href="mailto:nntuyen@gmail.com">nntuyen@gmail.com</a>
-                        </p>
-                        <p>
-                            <strong>Social:</strong>
-                            <br><a href="https://twitter.com/khobeostudios">Twitter</a>
-                            <br><a href="https://www.facebook.com/Khobeo-Studios-181518465742162">Facebook</a>
-                            <br> </p>
-                        <p>
-                            <strong>Releases:</strong>
-                            <br><a href="//khobeostudios.com/press/halloween-connect">Halloween Connect</a>
+                            <strong>Regular Price:</strong>
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td>Free</td>
+                                        <td></td>
+                                    </tr>
+                                </tbody>
+                            </table>
                             <br> 
                         </p>
                         <p> </p>
@@ -83,39 +91,56 @@
                     <div class="uk-width-medium-4-6">
                         <h2 id="description">Description</h2>
                         <p>
-                            I'm Tuyen and I love creation
+                            Halloween Connect is a simple puzzle game. Your goal is trying to connect all matches before running out of time.
                         </p>
-                        <h2 id="history">About</h2>
-                        <strong>About Tuyen</strong>
-                        <p>
 
+                        <h2 id="history">History</h2>
+                        <p>
+                            Halloween 2017
                         </p>
-                        <h2 id="projects">Projects</h2>
+
+                        <h2 id="history">Features</h2>
                         <ul>
-                            <li><a href="//khobeostudios.com/press/halloween_connect">Halloween Connect</a></li>
+                            <li>
+                                Unlimited levels
+                            </li>
+                            <li>
+                                Normal mode & Crazy mode
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <hr>
-                <h2 id="images">Images</h2>
-                <div class="uk-grid images" style="position: relative; height: 427px;">
-                    <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="./resources/tuyen.png"><img src="./resources/tuyen.png" alt="tuyen.png"></a></div>
+
+                <h2 id="screenshots">Screenshots</h2>
+                <div class="uk-grid images" style="position: relative; height: 3339px;">
+                    <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="../../games/halloween-connect/resources/screenshot1.png"><img src="../../games/halloween-connect/resources/screenshot1.png" alt="screenshot1.png"></a></div>
+                    <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="../../games/halloween-connect/resources/screenshot5.png"><img src="../../games/halloween-connect/resources/screenshot5.png" alt="screenshot5.png"></a></div>
+                    <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="../../games/halloween-connect/resources/screenshot3.png"><img src="../../games/halloween-connect/resources/screenshot3.png" alt="screenshot3.png"></a></div>
+                    <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="../../games/halloween-connect/resources/screenshot4.png"><img src="../../games/halloween-connect/resources/screenshot4.png" alt="screenshot4.png"></a></div>
                 </div>
-                <p class="images-text"></p>
                 <hr>
-                <h2 id="logo">Logo</h2>
+
+                <h2 id="logo">Logo & Icon</h2>
                 <div class="uk-grid images" style="position: relative; height: 108px;">
                     <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="./resources/logo.png"><img src="./resources/logo.png" alt="logo"></a></div>
                 </div>
                 <hr>
-                <h2 id="quotes">Awards & Recognition</h2>
-                <ul>
-                    
-                </ul>
+
+                <h2 id="about">About Khobeo Studios</h2>
+                <p>
+                    <strong>Boilerplate</strong><br>
+                    Founded in 2017 and currently settled in Ho Chi Minh, Vietnam.
+                </p>
+                <p>
+                    <strong>More information</strong><br>
+                    More information on Rainbow Train, our logo & relevant media are available <a href="//khobeostudios/press">here</a>.
+                </p>
                 <hr>
+
                 <div class="uk-grid">
                     <div class="uk-width-medium-1-2">
-                        <h2 id="credits">Team</h2>
+                        <h2 id="credits">Halloween Connect Credits</h2>
                         <p><strong>Tuyen Nguyen</strong>
                             <br><a href="https://www.linkedin.com/in/nntuyen92/">Game Designer & Developer</a></p>
                     </div>
