--- a/games/dare-to-face/privacy/index.htm
+++ b/games/dare-to-face/privacy/index.htm
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8">
-    <title>Page Not Found</title>
+    <title>Dare To Face Privacy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         * {
@@ -41,9 +40,17 @@
         }
     </style>
 </head>
+
 <body>
-    <h1>Page Not Found</h1>
-    <p>Sorry, but the page you were trying to view does not exist.</p>
-    <p>Back to <a href="//khobeostudios.com">Home</a>
+	<h1>Privacy</h1>
+	<br>
+    <p>
+        This game is COPPA-compliant.<br>
+This game doesn't collect any personal information and doesn't share it with third parties.<br>
+This game doesn't require any extra permissions when installing the game so I can't collect any personal data.<br>
+This game contains no in-app purchases, no advertisements.<br>
+This game is fully functional offline.<br>
+If you have any questions about your privacy feel free to contact me at nntuyen@gmail.com.
+    </p>
 </body>
 </html>
