--- a/index.html
+++ b/index.html
@@ -33,13 +33,41 @@
       </div>
     </header>
 
+    <section class="content-section-a">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5 ml-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading"><a href="//khobeostudios/games/dare-to-face">Dare to face</a></h2>
+            <p class="lead">
+              Coming soon...
+            </p>
+
+            <div>
+              <a target="_blank" href="#" class="btn-app">
+                <img src="./img/download-app-ios.svg" alt="App Store Button">
+              </a>
+              <a target="_blank" href="#" class="btn-app">
+                <img src="./img/download-app-android.png" alt="Play Store Button">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-5 mr-auto">
+            
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="content-section-b">
       <div class="container">
         <div class="row">
           <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Halloween Connect</h2>
+            <h2 class="section-heading"><a href="//khobeostudios/games/halloween-connect">Halloween Connect</a></h2>
             <p class="lead">
               What will you do on this Halloween? Just grab this game and enjoy it. It challenges you to find all matching pairs before time runs out.
             </p>
