--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading"><a href="//khobeostudios/games/dare-to-face">Dare to face</a></h2>
+            <h2 class="section-heading"><a href="//khobeostudios.com/games/dare-to-face">Dare to face</a></h2>
             <p class="lead">
               Coming soon...
             </p>
@@ -67,7 +67,7 @@
           <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading"><a href="//khobeostudios/games/halloween-connect">Halloween Connect</a></h2>
+            <h2 class="section-heading"><a href="//khobeostudios.com/games/halloween-connect">Halloween Connect</a></h2>
             <p class="lead">
               What will you do on this Halloween? Just grab this game and enjoy it. It challenges you to find all matching pairs before time runs out.
             </p>
