--- a/press/halloween-connect/index.htm
+++ b/press/halloween-connect/index.htm
@@ -134,7 +134,7 @@
                 </p>
                 <p>
                     <strong>More information</strong><br>
-                    More information on Rainbow Train, our logo & relevant media are available <a href="//khobeostudios/press">here</a>.
+                    More information on Rainbow Train, our logo & relevant media are available <a href="//khobeostudios.com/press">here</a>.
                 </p>
                 <hr>
 
