--- a/games/halloween-connect/index.html
+++ b/games/halloween-connect/index.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
 
-    <section id="trailer">
+    <section id="trailer" style="margin-top: 100px;">
         <div class="container">
             <div class="row">
                 <div class="text-center">
