--- a/press/dare-to-face/index.htm
+++ b/press/dare-to-face/index.htm
@@ -37,6 +37,7 @@
                     <li><a href="#description">Description</a></li>
                     <li><a href="#history">History</a></li>
                     <li><a href="#projects">Projects</a></li>
+                    <li><a href="#videos">Videos</a></li>
                     <li><a href="#screenshots">Screenshots</a></li>
                     <li><a href="#logo">Logo & Icon</a></li>
                     <li><a href="#about">About Khobeo Studios</a></li>
@@ -57,15 +58,15 @@
 
                         <p>
                             <strong>Release date:</strong>
-                            <br> October 12th, 2017
+                            <br> October ..., 2017
                         </p>
 
                         <p>
                             <strong>Platforms:</strong>
                             <br>
-                            <a href="https://play.google.com/store/apps/details?id=com.khobeo.daretoface">Android</a>
+                            <a href="https://play.google.com/store/apps/details?id=com.khobeostudios.daretoface">Android</a>
                             <br>
-                            <a href="https://itunes.apple.com/app/dare-to-face-classic/id1296522283">iOS</a>
+                            <a href="https://itunes.apple.com/app/dare-to-face/id1302932798">iOS</a>
                         </p>
 
                         <p>
@@ -79,8 +80,12 @@
                             <table>
                                 <tbody>
                                     <tr>
-                                        <td>Free</td>
-                                        <td></td>
+                                        <td>VND</td>
+                                        <td>21.000d</td>
+                                    </tr>
+                                    <tr>
+                                        <td>USD</td>
+                                        <td>$0.99</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -91,25 +96,38 @@
                     <div class="uk-width-medium-4-6">
                         <h2 id="description">Description</h2>
                         <p>
-                            Halloween Connect is a simple puzzle game. Your goal is trying to connect all matches before running out of time.
+                            Dare To Face is a turn-based strategy puzzle game with minimalist style. You should be careful about each move to get goal.
                         </p>
 
                         <h2 id="history">History</h2>
                         <p>
-                            Halloween 2017
+                            
                         </p>
 
                         <h2 id="history">Features</h2>
                         <ul>
                             <li>
-                                Unlimited levels
+                                Use swipe-to-move to control your character.
                             </li>
                             <li>
-                                Normal mode & Crazy mode
+                                Collect weapon to kill enemies.
+                            </li>
+                            <li>
+                                Moves-limited level.
                             </li>
                         </ul>
                     </div>
                 </div>
+                <hr>
+
+                <h2 id="videos">Videos</h2>
+                <p>
+                    <strong>Trailer</strong> <a href="https://www.youtube.com/watch?v=3FvgRyQaMVk">Youtube</a>
+
+                    <div class="uk-reponseive-width iframe-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/3FvgRyQaMVk" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </p>
                 <hr>
 
                 <h2 id="screenshots">Screenshots</h2>
@@ -140,7 +158,7 @@
 
                 <div class="uk-grid">
                     <div class="uk-width-medium-1-2">
-                        <h2 id="credits">Halloween Connect Credits</h2>
+                        <h2 id="credits">Dare To Face Credits</h2>
                         <p><strong>Tuyen Nguyen</strong>
                             <br><a href="https://www.linkedin.com/in/nntuyen92/">Game Designer & Developer</a></p>
                     </div>
