--- a/press/index.htm
+++ b/press/index.htm
@@ -87,7 +87,7 @@
                             I'm Tuyen and I love creation
                         </p>
                         <h2 id="history">About</h2>
-                        <strong>About Tuyen</strong>
+                        <strong>Tuyen is on his way to find himself</strong>
                         <p>
 
                         </p>
