--- a/games/dare-to-face/index.html
+++ b/games/dare-to-face/index.html
@@ -67,7 +67,9 @@
         <div class="container">
             <div class="row">
                 <div class="text-center">
-                    <p></p>
+                    <p>
+                        Dare To Face is a turn-based strategy puzzle game with minimalist style. You should be careful about each move to get goal.
+                    </p>
                 </div>
             </div>
         </div>
