--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="//khobeostudios.com/press">Press kit</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
 
