--- a/press/index.htm
+++ b/press/index.htm
@@ -87,7 +87,7 @@
                             I'm Tuyen and I love creation
                         </p>
                         <h2 id="history">About</h2>
-                        <strong>Tuyen is on his way to find himself</strong>
+                        <p>Tuyen is on his way to find himself</p>
                         <p>
 
                         </p>
@@ -101,7 +101,7 @@
                 <hr>
                 <h2 id="images">Images</h2>
                 <div class="uk-grid images" style="position: relative; height: 427px;">
-                    <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="./resources/tuyen.png"><img src="./resources/tuyen.png" alt="tuyen.png"></a></div>
+                    <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="./resources/tuyen.jpg"><img src="./resources/tuyen.jpg" alt="tuyen.jpg"></a></div>
                 </div>
                 <p class="images-text"></p>
                 <hr>
