--- a/press/halloween-connect/index.htm
+++ b/press/halloween-connect/index.htm
@@ -63,9 +63,9 @@
                         <p>
                             <strong>Platforms:</strong>
                             <br>
-                            <a href="https://play.google.com/store/apps/details?id=com.khobeo.daretoface">Android</a>
+                            <a href="https://play.google.com/store/apps/details?id=com.khobeo.halloweenconnect">Android</a>
                             <br>
-                            <a href="https://itunes.apple.com/app/dare-to-face-classic/id1296522283">iOS</a>
+                            <a href="https://itunes.apple.com/app/halloween-connect-classic/id1296522283">iOS</a>
                         </p>
 
                         <p>
