--- a/press/index.htm
+++ b/press/index.htm
@@ -75,7 +75,8 @@
                             <br> </p>
                         <p>
                             <strong>Releases:</strong>
-                            <br><a href="./halloween-connect">Halloween Connect</a>
+                            <br><a href="//khobeostudios.com/press/halloween-connect">Halloween Connect</a>
+                            <br><a href="//khobeostudios.com/press/dare-to-face">Dare To Face</a>
                             
                             <br> 
                         </p>
@@ -93,8 +94,8 @@
                         </p>
                         <h2 id="projects">Projects</h2>
                         <ul>
-                            <li><a href="./halloween-connect">Halloween Connect</a></li>
-                            
+                            <li><a href="//khobeostudios.com/press/halloween-connect">Halloween Connect</a></li>
+                            <li><a href="//khobeostudios.com/press/dare-to-face">Dare To Face</a></li>
                         </ul>
                     </div>
                 </div>
