--- a/index.html
+++ b/index.html
@@ -40,11 +40,38 @@
       </div>
     </header>
     
+    <section class="content-section-a">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 ml-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading"><a href="//khobeostudios.com/games/dare-to-face">Dare To Face</a></h2>
+            <p class="lead">
+              Are you good at strategy & puzzle? Dare To Face is a turn-based strategy puzzle game with minimalist style. You should be careful about each move to get goal.
+            </p>
+
+            <div>
+              <a target="_blank" href="https://itunes.apple.com/app/dare-to-face/id1302932798" class="btn-app">
+                <img src="./img/download-app-ios.svg" alt="App Store Button">
+              </a>
+              <a target="_blank" href="https://play.google.com/store/apps/details?id=com.khobeostudios.daretoface" class="btn-app">
+                <img src="./img/download-app-android.png" alt="Play Store Button">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-6 mr-auto">
+            <iframe width="530" height="298" src="https://www.youtube.com/embed/3FvgRyQaMVk" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section class="content-section-b">
       <div class="container">
         <div class="row">
-          <div class="col-lg-5 ml-auto">
+          <div class="col-lg-6 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading"><a href="//khobeostudios.com/games/halloween-connect">Halloween Connect</a></h2>
@@ -62,8 +89,8 @@
             </div>
           </div>
 
-          <div class="col-lg-5 mr-auto">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/FeepVLD4xbo" frameborder="0" allowfullscreen></iframe>
+          <div class="col-lg-6 mr-auto">
+            <iframe width="530" height="298" src="https://www.youtube.com/embed/FeepVLD4xbo" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
