--- a/press/dare-to-face/index.htm
+++ b/press/dare-to-face/index.htm
@@ -58,7 +58,7 @@
 
                         <p>
                             <strong>Release date:</strong>
-                            <br> October ..., 2017
+                            <br> November 1st 2017
                         </p>
 
                         <p>
