--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="//khobeostudios.com/press">Press kit</a>
+              <a class="nav-link" href="//khobeostudios.com/press" target="_blank">Press kit</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.youtube.com/channel/UCR1pFHkhL53qMeYfttDxLUw?sub_confirmation=1" target="_blank">Youtube</a>
             </li>
           </ul>
         </div>
@@ -102,13 +106,20 @@
           <li class="list-inline-item">
             <a href="#">Home</a>
           </li>
+
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
             <a href="https://www.facebook.com/Khobeo-Studios-181518465742162/" target="_blank">Facebook</a>
           </li>
+
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
             <a href="https://twitter.com/khobeostudios" target="_blank">Twitter</a>
+          </li>
+
+          <li class="footer-menu-divider list-inline-item">&sdot;</li>
+          <li class="list-inline-item">
+            <a href="https://www.youtube.com/channel/UCR1pFHkhL53qMeYfttDxLUw?sub_confirmation=1" target="_blank">Youtube</a>
           </li>
         </ul>
         <p class="copyright text-muted small">Copyright &copy; Khobeo Studios 2017. All Rights Reserved</p>
