--- a/press/halloween-connect/index.htm
+++ b/press/halloween-connect/index.htm
@@ -151,7 +151,7 @@
                         <p><strong>Twitter</strong>
                             <br><a href="http://twitter.com/khobeostudios">twitter.com/khobeostudios</a></p>
                         <p><strong>Facebook</strong>
-                            <br><a href="http://facebook.com/Khobeo-Studios-181518465742162">facebook.com/Khobeo-Studios-181518465742162</a></p>
+                            <br><a href="http://facebook.com/khobeostudios">facebook.com/khobeostudios</a></p>
                         <p><strong>Web</strong>
                             <br><a href="http://khobeostudios.com/">khobeostudios.com</a></p>
                     </div>
