--- a/press/index.htm
+++ b/press/index.htm
@@ -71,7 +71,7 @@
                         <p>
                             <strong>Social:</strong>
                             <br><a href="https://twitter.com/khobeostudios">Twitter</a>
-                            <br><a href="https://www.facebook.com/Khobeo-Studios-181518465742162">Facebook</a>
+                            <br><a href="https://www.facebook.com/khobeostudios">Facebook</a>
                             <br> </p>
                         <p>
                             <strong>Releases:</strong>
@@ -129,7 +129,7 @@
                         <p><strong>Twitter</strong>
                             <br><a href="http://twitter.com/khobeostudios">twitter.com/khobeostudios</a></p>
                         <p><strong>Facebook</strong>
-                            <br><a href="http://facebook.com/Khobeo-Studios-181518465742162">facebook.com/Khobeo-Studios-181518465742162</a></p>
+                            <br><a href="http://facebook.com/khobeostudios">facebook.com/khobeostudios</a></p>
                         <p><strong>Web</strong>
                             <br><a href="http://khobeostudios.com/">khobeostudios.com</a></p>
                     </div>
