--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="https://www.facebook.com/Khobeo-Studios-181518465742162/" target="_blank">Facebook</a>
+            <a href="https://www.facebook.com/khobeostudios" target="_blank">Facebook</a>
           </li>
 
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
