--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <a href="https://www.youtube.com/channel/UCR1pFHkhL53qMeYfttDxLUw?sub_confirmation=1" target="_blank">Youtube</a>
           </li>
         </ul>
-        <p class="copyright text-muted small">Copyright &copy; Khobeo Studios 2017. All Rights Reserved</p>
+        <p class="copyright text-muted small">Copyright &copy; Khobeo Studios 2017.</p>
       </div>
     </footer>
 
