--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="https://www.youtube.com/channel/UCR1pFHkhL53qMeYfttDxLUw?sub_confirmation=1" target="_blank">Youtube</a>
+              <a class="nav-link" href="https://www.youtube.com/channel/UCx11SMasyJnVbiuOS71NtZQ?sub_confirmation=1" target="_blank">Youtube</a>
             </li>
           </ul>
         </div>
@@ -48,7 +48,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 mr-auto">
-            <iframe width="530" height="298" src="https://www.youtube.com/embed/3FvgRyQaMVk" frameborder="0" allowfullscreen></iframe>
+            <iframe width="530" height="298" src="https://www.youtube.com/watch?v=ajhKTtaCtRk" frameborder="0" allowfullscreen></iframe>
           </div>
           
           <div class="col-lg-6 ml-auto">
@@ -119,7 +119,7 @@
 
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="https://www.youtube.com/channel/UCR1pFHkhL53qMeYfttDxLUw?sub_confirmation=1" target="_blank">Youtube</a>
+            <a href="https://www.youtube.com/channel/UCx11SMasyJnVbiuOS71NtZQ?sub_confirmation=1" target="_blank">Youtube</a>
           </li>
         </ul>
         <p class="copyright text-muted small">Copyright &copy; Khobeo Studios 2017.</p>
