--- a/games/dare-to-face/index.html
+++ b/games/dare-to-face/index.html
@@ -47,7 +47,7 @@
                     <h1 class="margin-top-0 text-primary">Dare To Face</h1>
                     <br>
 
-                    <iframe width="840" height="472" src="https://www.youtube.com/watch?v=ajhKTtaCtRk" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="840" height="472" src="https://www.youtube.com/embed/ajhKTtaCtRk" frameborder="0" allowfullscreen></iframe>
 
                     <div class="download">
                         <a target="_blank" href="https://itunes.apple.com/app/dare-to-face/id1302932798?mt=8" class="btn-app">
