--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 mr-auto">
-            <iframe width="530" height="298" src="https://www.youtube.com/watch?v=ajhKTtaCtRk" frameborder="0" allowfullscreen></iframe>
+            <iframe width="530" height="298" src="https://www.youtube.com/embed/ajhKTtaCtRk" frameborder="0" allowfullscreen></iframe>
           </div>
           
           <div class="col-lg-6 ml-auto">
