--- a/press/dare-to-face/index.htm
+++ b/press/dare-to-face/index.htm
@@ -118,10 +118,10 @@
 
                 <h2 id="videos">Videos</h2>
                 <p>
-                    <strong>Trailer</strong> <a href="https://www.youtube.com/watch?v=ajhKTtaCtRk">Youtube</a>
+                    <strong>Trailer</strong> <a href="https://www.youtube.com/embed/ajhKTtaCtRk">Youtube</a>
 
                     <div class="uk-reponseive-width iframe-container">
-                        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ajhKTtaCtRk" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ajhKTtaCtRk" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </p>
                 <hr>
