--- a/games/halloween-connect/index.html
+++ b/games/halloween-connect/index.html
@@ -46,7 +46,7 @@
                     <h1 class="margin-top-0 text-primary">Halloween Connect</h1>
                     <br>
 
-                    <iframe width="840" height="472" src="https://www.youtube.com/embed/FeepVLD4xbo" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="840" height="472" src="https://www.youtube.com/embed/RrMnX-65ZvM" frameborder="0" allowfullscreen></iframe>
 
                     <div class="download">
                         <a target="_blank" href="https://itunes.apple.com/app/halloween-connect-classic/id1296522283" class="btn-app">
