--- a/games/formation/index.html
+++ b/games/formation/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Dare To Face</title>
-    <meta name="description" content="Dare To Face" />
+    <title>Formation Puzzle</title>
+    <meta name="description" content="Formation Puzzle" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="../resources/css/bootstrap.min.css" />
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#" style="color: #274054;">Dare To Face</a>
+                <a class="navbar-brand page-scroll" href="#" style="color: #274054;">Formation Puzzle</a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
@@ -33,7 +33,7 @@
                         <a href="#support">Support</a>
                     </li>
                     <li>
-                        <a href="//khobeostudios.com/press/dare-to-face">Press</a>
+                        <a href="//khobeostudios.com/press/formation">Press</a>
                     </li>
                 </ul>
             </div>
@@ -44,17 +44,17 @@
         <div class="container">
             <div class="row">
                 <div class="text-center">
-                    <h1 class="margin-top-0 text-primary">Dare To Face</h1>
+                    <h1 class="margin-top-0 text-primary">Formation Puzzle</h1>
                     <br>
 
-                    <iframe width="840" height="472" src="https://www.youtube.com/embed/ajhKTtaCtRk" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="840" height="472" src="https://www.youtube.com/embed/EYlLyGginnM" frameborder="0" allowfullscreen></iframe>
 
                     <div class="download">
-                        <a target="_blank" href="https://itunes.apple.com/app/dare-to-face/id1302932798?mt=8" class="btn-app">
+                        <a target="_blank" href="https://itunes.apple.com/us/app/formation-puzzle/id1326610902?ls=1&mt=8" class="btn-app">
                           <img src="../../img/download-app-ios.svg" alt="App Store Button">
                         </a>
 
-                        <a target="_blank" href="https://play.google.com/store/apps/details?id=com.khobeostudios.daretoface" class="btn-app">
+                        <a target="_blank" href="https://play.google.com/store/apps/details?id=com.khobeostudios.formation" class="btn-app">
                           <img src="../../img/download-app-android.png" alt="Play Store Button">
                         </a>
                     </div>
@@ -68,7 +68,7 @@
             <div class="row">
                 <div class="text-center">
                     <p>
-                        Dare To Face is a turn-based strategy puzzle game with minimalist style. You should be careful about each move to get goal.
+                        Formation
                     </p>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                         </div>
                     </a>
                 </div>
-				<div class="clearfix hidden-lg"> </div>
+                <div class="clearfix hidden-lg"> </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./resources/screenshot3.png">
                         <img src="./resources/screenshot3.png" class="img-responsive" alt="Image 3">
@@ -128,7 +128,7 @@
                         </div>
                     </a>
                 </div>
-				<div class="clearfix hidden-lg"> </div>
+                <div class="clearfix hidden-lg"> </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./resources/screenshot5.png">
                         <img src="./resources/screenshot5.png" class="img-responsive" alt="Image 5">
@@ -162,7 +162,7 @@
             <div class="row">
                 <div class="text-center">
                     <h3>Press Kit:</h3>
-                    <a href="//khobeostudios.com/press/dare-to-face">http://khobeostudios.com/press/dare-to-face</a>
+                    <a href="//khobeostudios.com/press/formation">http://khobeostudios.com/press/formation</a>
                 </div>
             </div>
         </div>
@@ -173,7 +173,7 @@
             <div class="row">
                 <div class="text-center">
                     <h3>Contact:</h3>
-                    <a href="//khobeostudios.com">Website</a>
+                    <a href="http://khobeostudios.com">Website</a>
                     <br>
                     <a href="https://www.facebook.com/khobeostudios">Facebook</a>
                     <br>
