--- a/games/formation/index.html
+++ b/games/formation/index.html
@@ -68,7 +68,7 @@
             <div class="row">
                 <div class="text-center">
                     <p>
-                        Formation
+                        In Formation Puzzle you will create white energy to destroy the center black thing.
                     </p>
                 </div>
             </div>
