--- a/press/formation/index.htm
+++ b/press/formation/index.htm
@@ -92,7 +92,7 @@
                     <div class="uk-width-medium-4-6">
                         <h2 id="description">Description</h2>
                         <p>
-                            Formation Puzzle
+                            In Formation Puzzle you will create white energy to destroy the center black thing.
                         </p>
 
                         <h2 id="history">History</h2>
@@ -103,7 +103,10 @@
                         <h2 id="history">Features</h2>
                         <ul>
                             <li>
-                                Tap dots to release energy.
+                                Just tap the color dots to create white energy.
+                            </li>
+                            <li>
+                                Formation Puzzle is designed for both tablets and phones.
                             </li>
                         </ul>
                     </div>
