--- a/index.html
+++ b/index.html
@@ -43,6 +43,37 @@
         </div>
       </div>
     </header>
+
+    <section class="content-section-b">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 ml-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading"><a href="//khobeostudios.com/games/halloween-connect">Formation Puzzle</a></h2>
+
+            <img class="app-logo" src="./press/formation/resources/logo.png" alt="Formation Puzzle">
+
+            <p class="lead">
+              In Formation Puzzle you will create white energy to destroy the center black thing.
+            </p>
+
+            <div>
+              <a target="_blank" href="https://itunes.apple.com/us/app/formation-puzzle/id1326610902?ls=1&mt=8" class="btn-app">
+                <img src="./img/download-app-ios.svg" alt="App Store Button">
+              </a>
+              <a target="_blank" href="https://play.google.com/store/apps/details?id=com.khobeostudios.formation" class="btn-app">
+                <img src="./img/download-app-android.png" alt="Play Store Button">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-6 mr-auto">
+            <iframe width="530" height="298" src="https://www.youtube.com/embed/EYlLyGginnM" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
     
     <section class="content-section-a">
       <div class="container">
@@ -55,6 +86,9 @@
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading"><a href="//khobeostudios.com/games/dare-to-face">Dare To Face</a></h2>
+
+            <img class="app-logo" src="./press/dare-to-face/resources/logo.png" alt="Dare To Face">
+
             <p class="lead">
               Are you good at strategy & puzzle? Dare To Face is a turn-based strategy puzzle game with minimalist style. You should be careful about each move to get goal.
             </p>
@@ -79,6 +113,9 @@
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading"><a href="//khobeostudios.com/games/halloween-connect">Halloween Connect</a></h2>
+
+            <img class="app-logo" src="./press/halloween-connect/resources/logo.png" alt="Dare To Face">
+
             <p class="lead">
               What will you do on this Halloween? Just grab this game and enjoy it. It challenges you to find all matching pairs before time runs out.
             </p>
