--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="col-lg-6 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading"><a href="//khobeostudios.com/games/halloween-connect">Formation Puzzle</a></h2>
+            <h2 class="section-heading"><a href="//khobeostudios.com/games/formation">Formation Puzzle</a></h2>
 
             <img class="app-logo" src="./press/formation/resources/logo.png" alt="Formation Puzzle">
 
