--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
             <div class="clearfix"></div>
             <h2 class="section-heading"><a href="//khobeostudios.com/games/formation">Formation Puzzle</a></h2>
 
-            <img class="app-logo" src="./press/formation/resources/logo.png" alt="Formation Puzzle">
+            <a href="//khobeostudios.com/games/formation">
+              <img class="app-logo" src="./press/formation/resources/logo.png" alt="Formation Puzzle">
+            </a>
 
             <p class="lead">
               In Formation Puzzle you will create white energy to destroy the center black thing.
@@ -87,7 +89,9 @@
             <div class="clearfix"></div>
             <h2 class="section-heading"><a href="//khobeostudios.com/games/dare-to-face">Dare To Face</a></h2>
 
-            <img class="app-logo" src="./press/dare-to-face/resources/logo.png" alt="Dare To Face">
+            <a href="//khobeostudios.com/games/dare-to-face">
+              <img class="app-logo" src="./press/dare-to-face/resources/logo.png" alt="Dare To Face">
+            </a>
 
             <p class="lead">
               Are you good at strategy & puzzle? Dare To Face is a turn-based strategy puzzle game with minimalist style. You should be careful about each move to get goal.
@@ -114,7 +118,9 @@
             <div class="clearfix"></div>
             <h2 class="section-heading"><a href="//khobeostudios.com/games/halloween-connect">Halloween Connect</a></h2>
 
-            <img class="app-logo" src="./press/halloween-connect/resources/logo.png" alt="Dare To Face">
+            <a href="//khobeostudios.com/games/halloween-connect">
+              <img class="app-logo" src="./press/halloween-connect/resources/logo.png" alt="Dare To Face">
+            </a>
 
             <p class="lead">
               What will you do on this Halloween? Just grab this game and enjoy it. It challenges you to find all matching pairs before time runs out.
