--- a/press/vegan-dino/index.htm
+++ b/press/vegan-dino/index.htm
@@ -31,20 +31,21 @@
         <div class="uk-grid">
             <div id="navigation" class="uk-width-medium-1-4">
                 <h1 class="nav-header">Khobeo Studios</h1>
-                <a class="nav-header" href="//khobeostudios.com/">khobeostudios.com</a>
+                <a class="nav-header" href="//khobeostudios.com/press">press kit</a>
                 <ul class="uk-nav uk-nav-side">
                     <li><a href="#factsheet">Factsheet</a></li>
                     <li><a href="#description">Description</a></li>
-                    <li><a href="#history">About</a></li>
+                    <li><a href="#history">History</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#images">Images</a></li>
-                    <li><a href="#logo">Logo</a></li>
-                    <li><a href="#quotes">Awards & Recognition</a></li>
+                    <li><a href="#videos">Videos</a></li>
+                    <li><a href="#screenshots">Screenshots</a></li>
+                    <li><a href="#logo">Logo & Icon</a></li>
+                    <li><a href="#about">About Khobeo Studios</a></li>
                     <li><a href="#credits">Team</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
-            <div id="content" class="uk-width-medium-3-4"><img src="./resources/header.jpg" class="header">
+            <div id="content" class="uk-width-medium-3-4"><img src="./resources/header.png" class="header">
                 <div class="uk-grid">
                     <div class="uk-width-medium-2-6">
                         <h2 id="factsheet">Factsheet</h2>
@@ -54,31 +55,36 @@
                             <a href="#">Khobeo Studios</a>
                             <br> Based in Ho Chi Minh, Vietnam
                         </p>
+
                         <p>
-                            <strong>Founding date:</strong>
-                            <br> September, 2017
+                            <strong>Release date:</strong>
+                            <br> October 31th, 2017
                         </p>
+
+                        <p>
+                            <strong>Platforms:</strong>
+                            <br>
+                            <a href="https://play.google.com/store/apps/details?id=com.khobeostudios.vegandinotrex">Android</a>
+                            <br>
+                            <a href="https://itunes.apple.com/us/app/vegan-dino-t-rex/id1326610902?ls=1&mt=8">iOS</a>
+                        </p>
+
                         <p>
                             <strong>Website:</strong>
                             <br>
                             <a href="//khobeostudios.com/">khobeostudios.com</a>
                         </p>
+
                         <p>
-                            <strong>Press / Business contact:</strong>
-                            <br>
-                            <a href="mailto:nntuyen@gmail.com">nntuyen@gmail.com</a>
-                        </p>
-                        <p>
-                            <strong>Social:</strong>
-                            <br><a href="https://twitter.com/khobeostudios">Twitter</a>
-                            <br><a href="https://www.facebook.com/khobeostudios">Facebook</a>
-                            <br> </p>
-                        <p>
-                            <strong>Releases:</strong>
-                            <br><a href="//khobeostudios.com/press/halloween-connect">Halloween Connect</a>
-                            <br><a href="//khobeostudios.com/press/dare-to-face">Dare To Face</a>
-                            <br><a href="//khobeostudios.com/press/formation">Formation Puzzle</a>
-                            <br><a href="//khobeostudios.com/press/vegan-dino">Vegan Dino T-Rex</a>
+                            <strong>Regular Price:</strong>
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td>USD</td>
+                                        <td>$0.99</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                             <br> 
                         </p>
                         <p> </p>
@@ -86,42 +92,65 @@
                     <div class="uk-width-medium-4-6">
                         <h2 id="description">Description</h2>
                         <p>
-                            I'm Tuyen and I love creation
+                            Vegan Dino T-Rex
                         </p>
-                        <h2 id="history">About</h2>
-                        <p>Tuyen is on his way to find himself</p>
-                        <p>
 
+                        <h2 id="history">History</h2>
+                        <p>
+                            
                         </p>
-                        <h2 id="projects">Projects</h2>
+
+                        <h2 id="history">Features</h2>
                         <ul>
-                            <li><a href="//khobeostudios.com/press/halloween-connect">Halloween Connect</a></li>
-                            <li><a href="//khobeostudios.com/press/dare-to-face">Dare To Face</a></li>
-                            <li><a href="//khobeostudios.com/press/formation">Formation Puzzle</a></li>
-                            <li><a href="//khobeostudios.com/press/vegan-dino">Vegan Dino T-Rex</a></li>
+                            <li>
+                                Just tap the color dots to create white energy.
+                            </li>
+                            <li>
+                                Vegan Dino T-Rex
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <hr>
-                <h2 id="images">Images</h2>
-                <div class="uk-grid images" style="position: relative; height: 427px;">
-                    <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="./resources/tuyen.jpg"><img src="./resources/tuyen.jpg" alt="tuyen.jpg"></a></div>
-                </div>
-                <p class="images-text"></p>
+
+                <h2 id="videos">Videos</h2>
+                <p>
+                    <strong>Trailer</strong> <a href="https://www.youtube.com/watch?v=04uX8hfTvzU">Youtube</a>
+
+                    <div class="uk-reponseive-width iframe-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/04uX8hfTvzU" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </p>
                 <hr>
-                <h2 id="logo">Logo</h2>
+
+                <h2 id="screenshots">Screenshots</h2>
+                <div class="uk-grid images" style="position: relative; height: 3339px;">
+                    <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="../../games/vegan-dino/resources/screenshot1.png"><img src="../../games/vegan-dino/resources/screenshot1.png" alt="screenshot1.png"></a></div>
+                    <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="../../games/vegan-dino/resources/screenshot2.png"><img src="../../games/vegan-dino/resources/screenshot2.png" alt="screenshot2.png"></a></div>
+                    <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="../../games/vegan-dino/resources/screenshot3.png"><img src="../../games/vegan-dino/resources/screenshot3.png" alt="screenshot3.png"></a></div>
+                </div>
+                <hr>
+
+                <h2 id="logo">Logo & Icon</h2>
                 <div class="uk-grid images" style="position: relative; height: 108px;">
                     <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="./resources/logo.png"><img src="./resources/logo.png" alt="logo"></a></div>
                 </div>
                 <hr>
-                <h2 id="quotes">Awards & Recognition</h2>
-                <ul>
-                    
-                </ul>
+
+                <h2 id="about">About Khobeo Studios</h2>
+                <p>
+                    <strong>Boilerplate</strong><br>
+                    Founded in 2017 and currently settled in Ho Chi Minh, Vietnam.
+                </p>
+                <p>
+                    <strong>More information</strong><br>
+                    More information on Khobeo Studios, our logo & relevant media are available <a href="http://khobeostudios.com/press">here</a>.
+                </p>
                 <hr>
+
                 <div class="uk-grid">
                     <div class="uk-width-medium-1-2">
-                        <h2 id="credits">Team</h2>
+                        <h2 id="credits">Vegan Dino T-Rex Credits</h2>
                         <p><strong>Tuyen Nguyen</strong>
                             <br><a href="https://www.linkedin.com/in/nntuyen92/">Game Designer & Developer</a></p>
                     </div>
