--- a/index.html
+++ b/index.html
@@ -44,6 +44,39 @@
       </div>
     </header>
 
+    <section class="content-section-a">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 mr-auto">
+            <iframe width="530" height="298" src="https://www.youtube.com/embed/04uX8hfTvzU" frameborder="0" allowfullscreen></iframe>
+          </div>
+          
+          <div class="col-lg-6 ml-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading"><a href="//khobeostudios.com/games/vegan-dino">Vegan Dino T-Rex</a></h2>
+
+            <a href="//khobeostudios.com/games/dare-to-face">
+              <img class="app-logo" src="./press/vegan-dino/resources/logo.png" alt="Vegan Dino T-Rex">
+            </a>
+
+            <p class="lead">
+              Give the dino grass.
+            </p>
+
+            <div>
+              <a target="_blank" href="https://itunes.apple.com/us/app/vegan-dino-t-rex/id1341261915?ls=1&mt=8" class="btn-app">
+                <img src="./img/download-app-ios.svg" alt="App Store Button">
+              </a>
+              <a target="_blank" href="https://play.google.com/store/apps/details?id=com.khobeostudios.vegandinotrex" class="btn-app">
+                <img src="./img/download-app-android.png" alt="Play Store Button">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="content-section-b">
       <div class="container">
         <div class="row">
