--- a/press/index.htm
+++ b/press/index.htm
@@ -66,7 +66,7 @@
                         <p>
                             <strong>Press / Business contact:</strong>
                             <br>
-                            <a href="mailto:nntuyen@gmail.com">nntuyen@gmail.com</a>
+                            <a href="mailto:nntuyen92@gmail.com">nntuyen92@gmail.com</a>
                         </p>
                         <p>
                             <strong>Social:</strong>
@@ -128,7 +128,7 @@
                     <div class="uk-width-medium-1-2">
                         <h2 id="contact">Contact</h2>
                         <p><strong>Inquiries</strong>
-                            <br><a href="mailto:nntuyen@gmail.com">nntuyen@gmail.com</a></p>
+                            <br><a href="mailto:nntuyen92@gmail.com">nntuyen92@gmail.com</a></p>
                         <p><strong>Twitter</strong>
                             <br><a href="http://twitter.com/khobeostudios">twitter.com/khobeostudios</a></p>
                         <p><strong>Facebook</strong>
